--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           </div> -->
         </div>
       </div>
-      <footer> Coded by Diankita and <a href="https://github.com/diankita/Weather-app">Open sourced on Github</a></footer>
+      <footer> Coded by Diankita and <a href="https://github.com/diankita/Weather-app" target="_blank">Open sourced on Github</a></footer>
     </div>
     <script src="src/index.js"></script>
   </body>
